fixed scrollbar styling on charts

--- a/src/styles/charts-example.less
+++ b/src/styles/charts-example.less
@@ -59,29 +59,14 @@
 	}
 
 	.chart-image{
+		height: 200px;
 		margin-bottom: 1.5em;
-		margin-top: auto;
 		border-bottom: thin solid black;
 		overflow-y: scroll;
-	}
-
-	.bar{
-		border-color: blue;
-		border-style: solid;
-		background-color: blue;
-		height: 1em;
-	}
-
-	.grid{
-		position: absolute;
-		pointer-events: none;
-		top: 0px;
-		left: 0px;
-		height: 100%;
-		width: 100%;
 
 		.grid-line{
 			position: absolute;
+			top: 0px;
 			height: 100%;
 			border-right: thin solid gray;
 
@@ -91,6 +76,13 @@
 				right: .2em;
 			}
 		}
+	}
+
+	.bar{
+		border-color: blue;
+		border-style: solid;
+		background-color: blue;
+		height: 1em;
 	}
 }
 
